@@ -187,7 +187,13 @@ public final class DOMUtils {
                 if (len > 0) {
                     writer.write(buffer, off, len);
                 }
-                writer.write(AMP);
+                if (isEntityStart(buffer, i)) {
+                    // This avoids escaping &'s that are in fact starting 
+                    // already escaped entities.
+                    writer.write('&');
+                } else {
+                    writer.write(AMP);
+                }
                 off = i + 1;
                 len = 0;
             } else if (c == '<') {
@@ -229,6 +235,21 @@ public final class DOMUtils {
     }
     
 
+    
+    private static boolean isEntityStart(final char[] buffer, final int position) {
+        int i = position + 1;
+        while (i < buffer.length) {
+            final char c = buffer[i];
+            if (!( (c >= 'A' && c <= 'Z') || (c >= 'a' && c <= 'z') || (c >= '0' && c <= '9') || (c == ';') )) {
+                return false;
+            } else if (c == ';') {
+                return true;
+            }
+            i++;
+        }
+        return false;
+    }
+    
     
     
     public static String unescapeXml(final String str, final boolean unescapeQuotes) {
